Basic markup of index

--- a/index.html
+++ b/index.html
@@ -8,9 +8,28 @@
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="icon" href="images/favicon.png" />
   </head>
-  <body>
+  <body id="about">
     <!-- content goes here -->
+    <nav>
+      <ul>
+        <li><a href="index.html">About</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="resume.html">Resume</a></li>
+      </ul>
+    </nav>
+    <main>
     <h1>Samantha DuBois</h1>
+    <img src="images/avatar.png" width=300vw>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id interdum velit laoreet id donec ultrices tincidunt arcu. Nisi vitae suscipit tellus mauris a diam. Luctus venenatis lectus magna fringilla urna. Massa enim nec dui nunc mattis enim ut tellus. Proin sed libero enim sed faucibus turpis in eu. Netus et malesuada fames ac turpis egestas maecenas pharetra convallis. Porttitor leo a diam sollicitudin tempor id eu. Id volutpat lacus laoreet non curabitur gravida arcu ac. Quis viverra nibh cras pulvinar mattis.
+    </p>
+    <p>  
+      Lectus sit amet est placerat in. Id aliquet lectus proin nibh nisl condimentum id venenatis a. Faucibus nisl tincidunt eget nullam non. Ultricies leo integer malesuada nunc vel risus commodo. Ultricies mi eget mauris pharetra et ultrices neque. Consequat ac felis donec et odio pellentesque. Lacus viverra vitae congue eu consequat ac felis. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. Lobortis feugiat vivamus at augue. Netus et malesuada fames ac.
+    </p>
+    </main>
+    <footer>
+      You can email me at duboissk@rose-hulman.edu
+    </footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
