Markup of resume

--- a/resume.html
+++ b/resume.html
@@ -1,28 +1,158 @@
-<!DOCTYPE  html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" conten="width=devie-width, initial-scale=1" />
-    <title>Samantha DuBois' Personal Website </title>
-    <link rel="stylesheet" href="styles/normalize.css" />
-    <link rel="stylesheet" href="styles/main.css" />
-    <link rel="icon" href="images/favicon.png" />
-  </head>
-  <body id="resume">
-    <nav>
-      <ul>
-        <li><a href="index.html">About</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="resume.html">Resume</a></li>
-      </ul>
-    </nav>
-    <main>
-      <h1>Resume</h1>
-    
-    </main>
-    <footer>
-      You can email me at duboissk@rose-hulman.edu
-    </footer>
-    <script src="scripts/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" conten="width=devie-width, initial-scale=1" />
+  <title>Samantha DuBois' Personal Website </title>
+  <link rel="stylesheet" href="styles/normalize.css" />
+  <link rel="stylesheet" href="styles/main.css" />
+  <link rel="icon" href="images/favicon.png" />
+</head>
+
+<body id="resume">
+  <nav>
+    <ul>
+      <li><a href="index.html">About</a></li>
+      <li><a href="portfolio.html">Portfolio</a></li>
+      <li><a href="resume.html">Resume</a></li>
+    </ul>
+  </nav>
+  <main>
+    <h1>Resume</h1>
+
+    <h2>Objective</h2>
+    <p>To apply and develop my coding skills through a Computer Science internship</p>
+
+    <h2>Education</h2>
+    <p>Rose-Hulman Institute of Technology</p>
+    <dd>
+    <dt>Major</dt>
+    <dl>B.S. Computer Science</dl>
+    <dt>Minor</dt>
+    <dl>Robotics</dl>
+    <dt>Graduation</dt>
+    <dl>May 2023</dl>
+    <dt>GPA</dt>
+    <dl>3.20/4.00</dl>
+    </dd>
+
+    <h2>Skills</h2>
+    <h3>Languages</h3>
+    <ul>
+      <p>Proficient</p>
+      <li>Java</li>
+      <li>Python</li>
+      <li>HTML</li>
+      <li>Verilog</li>
+      <p>Familiar</p>
+      <li>MATLAB</li>
+      <li>CSS</li>
+    </ul>
+    <h3>Relevant courses</h3>
+    <ul>
+      <li>Introduction to Software Development</li>
+      <li>Object-Oriented Software Development</li>
+      <li>Data Structures &#38 Algorithm Analysis</li>
+      <li>Introduction to Digita Systems</li>
+    </ul>
+
+    <h2>Work Experience</h2>
+    <ul>
+      <li>
+        <h3>TechPoint Foundation - Summer Opportunities for Students(SOS) Challenge</h3>
+        <h4>Intern</h4>
+        <ul>
+          <li>Participated as a designer and programmer, on a multi-disciplinary team to create a solution for the
+            challenges faced by the customer service industry during the COVID-19 pandemic</li>
+          <li>Designed a web-app to increase the reach of the California Closets</li>
+          <li>Worked remotely 20 hours per week to create a go-to-market strategy/product prototype</li>
+        </ul>
+        <h5>June 2020 - July 2020</h5>
+      </li>
+
+      <li>
+        <h3>Helmer Scientific Inc. - Conexus Manufacturing</h3>
+        <h4>Intern Material Handler</h4>
+        <!-- - Materials Department -->
+        <ul>
+          <li>Full-time intern as a Materials Handler and in the Shipping Department</li>
+          <li>Advanced manufacturing and logistics industry internship</li>
+        </ul>
+        <h5>June 2018 - July 2018</h5>
+      </li>
+
+    </ul>
+
+    <h2>Activities</h2>
+    <ul>
+      <li>
+        <h3>Society of Women in Engineering (SWE)</h3>
+        <h4>Member</h4>
+        <ul>
+          <li>Familiarize myself with proper workplace etiquette</li>
+          <li>Develop skills to deal with adversity</li>
+        </ul>
+        <h5> September 2019 - Current</h5>
+      </li>
+
+      <li>
+        <h3>Women of Like Fields Passionate About Computing (WOLF PAC)</h3>
+        <h4>Member</h4>
+        <ul>
+          <li>Increasing awareness of opportunities to grow professionally</li>
+          <li>Guiding K-12 students towards Rose-Hulman Institute of Technology</li>
+        </ul>
+        <h5>November 2020 - Current</h5>
+      </li>
+
+      <li>
+        <h3>Residence Hall Association (RHA)</h3>
+        <h4>Member</h4>
+        <ul>
+          <li>Plan events for students living on-campus</li>
+          <li>Advocating for resident needs</li>
+        </ul>
+        <h5>September 2019 - Current</h5>
+      </li>
+
+      <li>
+        <h3>Engineers Without Borders</h3>
+        <h4>Member</h4>
+        <ul>
+          <li>Designing a water supply system for a city in Ecuador that has no clean
+            water source nearby</li>
+          <li>Collaborating with fellow students of various majors</li>
+        </ul>
+        <h5>September 2019 - May 2020</h5>
+      </li>
+    </ul>
+    <h2>Honors &#38 Awards</h2>
+    <ul>
+      <li>
+        <h3>Dean's List</h3>
+        <h4>Rose-Hulman Institute of Technology</h4>
+        <ul>
+          <li>Winter 2020</li>
+          <li>Spring 2020</li>
+        </ul>
+      </li>
+
+      <li>
+        <h3>1st in State / 19th in Nation</h3>
+        <h4>Girls Go CyberStart Cyber Security competition</h4>
+        <p>National Championship Award presented by Homeland Security and SANS Technology Institute</p>
+        <ul>
+          <li>June 2019</li>
+        </ul>
+      </li>
+    </ul>
+
+  </main>
+  <footer>
+    You can email me at duboissk@rose-hulman.edu
+  </footer>
+  <script src="scripts/main.js"></script>
+</body>
+
 </html>
