--- a/resume.html
+++ b/resume.html
@@ -29,8 +29,6 @@
     <dd>
     <dt>Major</dt>
     <dl>B.S. Computer Science</dl>
-    <dt>Minor</dt>
-    <dl>Robotics</dl>
     <dt>Graduation</dt>
     <dl>May 2023</dl>
     <dt>GPA</dt>
@@ -44,6 +42,8 @@
       <li>Java</li>
       <li>Python</li>
       <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
       <li>Verilog</li>
       <p>Familiar</p>
       <li>MATLAB</li>
