--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
     </ul>
   </nav>
   <main>
-    <h1>Resume</h1>
+    <h1>Resume - Samantha DuBois</h1>
 
     <h2>Objective</h2>
     <p>To apply and develop my coding skills through a Computer Science internship</p>
